--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,16 @@
 {
-  "cSpell.words": ["autosize", "bgclr", "cmps", "fullname", "imgs", "previewboard", "semibold", "Signup", "todos"],
+  "cSpell.words": [
+    "autosize",
+    "bgclr",
+    "cmps",
+    "fullname",
+    "imgs",
+    "Loggedin",
+    "previewboard",
+    "semibold",
+    "Signup",
+    "todos"
+  ],
   "workbench.colorCustomizations": {
     "activityBar.activeBackground": "#93e6fc",
     "activityBar.activeBorder": "#fa45d4",
