added links to github and linkedin in home-page footer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,14 @@
 {
   "cSpell.words": [
     "autosize",
+    "Avichzer",
     "bgclr",
     "cmps",
+    "Eran",
     "fullname",
     "imgs",
     "Loggedin",
+    "Ofer",
     "previewboard",
     "semibold",
     "Signup",
