Removed comments and console logs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
     "fullname",
     "imgs",
     "Loggedin",
+    "noopener",
+    "noreferrer",
     "Ofer",
     "previewboard",
     "semibold",
